--- a/Dyanote/src/main/res/values/strings.xml
+++ b/Dyanote/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_edit_note">Edit Note</string>
     <string name="hello_world">Hello world!</string>
+    <string name="action_logout">Logout</string>
 
 </resources>
