--- a/Dyanote/src/main/res/values/strings.xml
+++ b/Dyanote/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="save_button_text">Save</string>
     <string name="no_network_error">Dyanote needs an internet connection to get your notes.</string>
     <string name="connected_message">Connected.</string>
+    <string name="delete_button_text">Delete</string>
+    <string name="new_button_text">New</string>
 
 </resources>
