--- a/Dyanote/src/main/res/values/strings.xml
+++ b/Dyanote/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="action_new">New</string>
     <string name="new_note_title">New note title</string>
     <string name="new_note_content"><![CDATA[<note></note>]]></string>
+    <string name="note_deleted_message">That note was deleted</string>
 
 </resources>
